<resources>
    <string name="app_name">RestaurantApp</string>

    <!--    Id name_Attribute_Layout name-->
    <string name="email_hint_signIn">Email</string>
    <string name="password_hint_signIn">Password</string>
    <string name="signInBtn_text_signIn">Sign In</string>
    <string name="signUpMsg_text_signIn">Don\'t have an account yet? <u><font color='blue'>Sign Up</font></u></string>

    <string name="signUpBtn_text_signUp">Sign Up</string>
    <string name="signInMsg_text_signUp">Already have an account? <u><font color='blue'>Sign In</font></u></string>
    <string name="firstName_hint_signUp">First Name</string>
    <string name="lastName_hint_signUp">Last Name</string>
    <string name="confirmPassword_hint_signUp">Confirm Password</string>
    <string name="phoneNumber_hint_signUp">Phone Number</string>
    <string name="gender_signUp">Gender:</string>
    <string name="maleGender_signUp">Male</string>
    <string name="femaleGender_signUp">Female</string>
    <string name="dateOfBirth_signUp">Date of Birth:</string>
    <string name="status_account_active"><font color='green'>• Active</font></string>
    <string name="status_account_deleted"><font color='red'>• Deleted</font></string>

    <string name="forgotPassword_account"><font color='blue'>Forgot Password ?</font></string>
    <string name="failResetPassword_signIn">Failed to send reset password email.</string>
    <string name="successResetPassword_signIn">Please look at your mail for reset password.</string>
    <string name="signInError_main">Email or Password is wrong</string>
    <string name="emailError_main">Please fill the email</string>
    <string name="passwordError_main">Please fill the password</string>
    <string name="verifyEmail_main">You should verify your email first.</string>
    <string name="emailOrPasswordWrong_main">Email or Password may be wrong.</string>
    <string name="accountDeleted_main">Your account has been deleted.</string>

    <string name="firstName_errorEmpty_signUp">Please fill your first name</string>
    <string name="firstName_error_signUp">First Name at least 3 characters</string>
    <string name="lastName_errorEmpty_signUp">Please fill your last name</string>
    <string name="lastName_error_signUp">Last Name at least 3 characters</string>
    <string name="gender_errorEmpty_signUp">Please provide your gender</string>
    <string name="phoneNumber_errorEmpty_signUp">Please fill your phone number</string>
    <string name="phoneNumber_error_signUp">Please enter a valid phone number</string>
    <string name="email_errorEmpty_signUp">Please fill your email</string>
    <string name="email_error_signUp">Please enter a valid email</string>
    <string name="password_errorEmpty_signUp">Please fill your password</string>
    <string name="password_error_signUp">at least 8 characters</string>
    <string name="confirmPassword_errorEmpty_signUp">Please fill your first name</string>
    <string name="confirmPassword_error_signUp">Password Confirmation does not match</string>
    <string name="errorMessage_user_edit_delete">An error has occurred.\nPlease try again later,\nand if it happens again. Report \nto the IT team. Thank You!</string>
    <string name="confirmDeleteMessage_user_edit_delete">Are you sure you want to delete\nthis account ?</string>
    <string name="confirmReActivateMessage_user_edit_delete">Are you sure you want to Re-Activate\nthis account ?</string>
    <string name="confirmUpdateMessage_user_edit_delete">Are you sure you want to update\nthis account ?</string>
    <string name="send_btn">Send</string>
    <string name="getBack_btn">Cancel</string>
    <string name="updateAccount_btn">Update</string>
    <string name="deleteAccount_btn">Delete</string>
    <string name="reActivateAccount_btn">Re-Activate</string>

    <string name="home_navigation_icon">Home</string>
    <string name="food_navigation_icon">Food Menu</string>
    <string name="navigation_navigation_icon">Navigation</string>
    <string name="Allreservation_navigation_icon">Reservations</string>
    <string name="reservation_navigation_icon">Reserve</string>
    <string name="users_navigation_icon">Users and Accounts</string>
    <string name="more_navigation_icon">More</string>
    <string name="admin_navigation_icon">Admin Panel</string>

    <string name="error_myAccount">An Error Has Occured\nPlease Try Again Later</string>
    <string name="fNameTxt_myAccount">First Name:</string>
    <string name="lNameTxt_myAccount">Last Name:</string>
    <string name="phoneNumberTxt_myAccount">Phone Number:</string>
    <string name="emailTxt_myAccount">Email:</string>
    <string name="delete_myAccount">Are you sure you want to delete your account ?\nThis action cannot be reverted!</string>
    <string name="myAccount_moreFragment">My Account</string>
    <string name="signOut_myAccount">Sign Out</string>
    <string name="password_myAccount">Change Password</string>
    <string name="newPassword_myAccount">New Password</string>
    <string name="confirmNewPassword_myAccount">Confirm New Password</string>
    <string name="deleteBtn_myAccount">Delete Account</string>
    <string name="updateFail_myAccount">Update Failed\nPlease Try Again Later</string>
    <string name="updateSuccess_myAccount">Update Successful!</string>

    <string name="changePassword_success">Password Changed Successfully</string>
    <string name="changePassword_fail">Password Did Not Change!</string>
    <string name="singUp_fail">Failed to Sign Up \nPlease try again later.</string>
    <string name="signUp_done">Your Registration has been completed.\nJust one last step, to verify your email.</string>
    <string name="registration_done_btn">Done</string>

    <string name="Cart">Cart</string>

    <string name="addUserBtn_users_crud">Add User</string>
    <string name="viewAllBtn_users_crud">View All Users</string>
    <string name="editUserBtn_users_crud">Edit User</string>
    <string name="deleteUserBtn_users_crud">Delete User</string>

    <string name="AddFoodBtn_food_crud">Add Food</string>
    <string name="EditFoodBtn_food_crud">Edit Food</string>
    <string name="DeleteFoodBtn_food_crud">Delete Food</string>
    <string name="ViewAllBtn_food_crud">View All Food</string>

    <string name="FoodName_Missing">Please type the name</string>
    <string name="FoodPrice_Missing">Please enter food price</string>
    <string name="FoodDesc_Missing">Please type food description</string>

    <string name="User_Doesnt_Exist">User Doesn\'t Exist</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="four_people_table">You Selected a 4 Person Table.</string>
    <string name="five_people_table">You Selected a 5 Person Table.</string>
    <string name="two_people_table">You Selected a 2 Person Table.</string>

    <string-array name="branches">
        <item>Select from here.</item>
        <item>Heliopolis</item>
        <item>Nasr City</item>
    </string-array>

    <string-array name="userTypes_array">
        <item>Admin</item>
        <item>Client</item>
        <item>Chef</item>
    </string-array>
</resources>
