<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    style="@style/mainLayout_style">

    <ScrollView
        android:id="@+id/mainLayout_signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal">

        <EditText
            android:id="@+id/firstName_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/firstName_hint_signUp"/>

        <EditText
            android:id="@+id/lastName_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/lastName_hint_signUp"/>

        <TextView
            android:id="@+id/genderTitle_signUp"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gender_signUp"/>

        <RadioGroup
            android:id="@+id/gender_signUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maleGender_signUp"/>
                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/femaleGender_signUp"/>
        </RadioGroup>

        <EditText
            android:id="@+id/phoneNumber_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phoneNumber_hint_signUp"
            android:inputType="phone" />

        <EditText
            android:id="@+id/email_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint_signIn"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint_signIn"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmPassword_signUp"
            style="@style/editText_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPassword_hint_signUp"
            android:inputType="textPassword"/>

        <Button
            android:id="@+id/btn_signUp"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUpBtn_text_signUp"
            android:onClick="signUp"/>

        <TextView
            android:id="@+id/signInLink_signUp"
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signInMsg_text_signUp"
            android:gravity="center"
            android:textSize="16dp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/registrationDone"
        style="@style/messageLayout_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        android:orientation="vertical">

        <TextView
            style="@style/textView_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signUp_done" />

        <Button
            android:id="@+id/registrationDone_btn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="DoneRegistration"
            android:layout_marginBottom="15dp"
            android:text="@string/registration_done_btn"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressbar_signUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:background="@color/transparent_background"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

</RelativeLayout>