<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    style="@style/mainLayout_style">

    <ScrollView
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".MainActivity">

            <ImageView
                android:id="@+id/logo_signIn"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="24dp"
                android:src="@drawable/ic_launcher_foreground" />

            <EditText
                android:id="@+id/email_signIn"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="10dp"
                android:hint="@string/email_hint_signIn"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/password_signIn"
                style="@style/editText_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/password_icon"
                android:drawablePadding="10dp"
                android:hint="@string/password_hint_signIn"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_signIn"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="signIn"
                android:text="@string/signInBtn_text_signIn" />

            <TextView
                android:id="@+id/forgotPassword_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgotPassword_account"
                android:gravity="center"
                style="@style/textView_style"/>

            <TextView
                android:id="@+id/signUpLink_signIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/signUpMsg_text_signIn"
                style="@style/textView_style"/>
        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/transparent_background"
        android:indeterminate="true"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/forgotPasswordFrame_signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:visibility="invisible"
        style="@style/messageLayout_style">

        <EditText
            android:id="@+id/forgotPasswordEmail_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_hint_signIn"
            android:gravity="center"
            style="@style/editText_style"/>

        <Button
            android:id="@+id/cancel_forgotPassword_singIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/getBack_btn"
            style="@style/button_style" />

        <Button
            android:id="@+id/send_forgotPassword_signIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_btn"
            style="@style/button_style" />
    </LinearLayout>

</RelativeLayout>